force-app/main/default/objects/Finance_Daily_Snapshot__c/Finance_Daily_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Finance Center: one row per project per day, written by FinanceCollectionStateBatch (nightly). Powers the aging / DSO / collection-efficiency trend charts, which cannot be rebuilt from history. All amounts are AED (converted via CurrencyService at snapshot time). Aging fields map to Aging_Bucket__mdt records by Sort_Order__c.</description>
    <label>Finance Daily Snapshot</label>
    <nameField>
        <displayFormat>FDS-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Daily Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>