force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Aging_180_Plus__c.field-meta.xml
<CustomField>
    <fullName>Aging_180_Plus__c</fullName>
    <description>AED. Open invoice pending amounts in aging bucket 6 (and any overflow buckets).</description>
    <label>Aging: 180+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>