force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Aging_1_30__c.field-meta.xml
<CustomField>
    <fullName>Aging_1_30__c</fullName>
    <description>Project currency. Open invoice pending amounts in aging bucket 2.</description>
    <label>Aging: 1-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>