force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Aging_31_60__c.field-meta.xml
<CustomField>
    <fullName>Aging_31_60__c</fullName>
    <description>Project currency. Open invoice pending amounts in aging bucket 3.</description>
    <label>Aging: 31-60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>