force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Aging_61_90__c.field-meta.xml
<CustomField>
    <fullName>Aging_61_90__c</fullName>
    <description>Project currency. Open invoice pending amounts in aging bucket 4.</description>
    <label>Aging: 61-90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>