force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Aging_Current__c.field-meta.xml
<CustomField>
    <fullName>Aging_Current__c</fullName>
    <description>Project currency. Open invoice pending amounts in aging bucket 1 (not yet past due).</description>
    <label>Aging: Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>