force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Contracted_Value__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Value__c</fullName>
    <description>Project currency. Sum of Unit__c.Unit_Cost_Number__c over Booked/Reserved/Sold units of the project.</description>
    <label>Contracted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>