force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/DQ_Exception_Count__c.field-meta.xml
<CustomField>
    <fullName>DQ_Exception_Count__c</fullName>
    <description>Data-quality exceptions found this run: negative remaining, over-receipt, plan-vs-price mismatch, receipts without allocation.</description>
    <label>DQ Exception Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>