force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount__c</fullName>
    <description>AED. Instalment-based: unpaid remaining on cash flows due on/before the snapshot date.</description>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>