force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Due_Not_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Not_Invoiced_Amount__c</fullName>
    <description>AED. Data quality: due cash-flow remaining where Is_Invoiced__c is false - money due that was never billed.</description>
    <label>Due Not Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>