force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Invoiced_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_To_Date__c</fullName>
    <description>Project currency. Sum of non-cancelled invoice totals (Sub_Total + VAT) for the sold units of the project.</description>
    <label>Invoiced To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>