force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Not_Yet_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Due_Amount__c</fullName>
    <description>Project currency. Unpaid remaining on future-dated cash flows.</description>
    <label>Not Yet Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>