force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Overdue_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Invoice_Amount__c</fullName>
    <description>AED. Invoice-based: pending amount of non-cancelled invoices past Due_Date__c.</description>
    <label>Overdue Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>