force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Finance Daily Snapshots</relationshipLabel>
    <relationshipName>Finance_Daily_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>