force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Received_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_To_Date__c</fullName>
    <description>Project currency. Sum of Unit__c.Total_Received_Amount__c.</description>
    <label>Received To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>