force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The day this snapshot represents (the batch run date).</description>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>