force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ProjectId|YYYY-MM-DD. Upsert key so a re-run of the batch on the same day overwrites instead of duplicating.</description>
    <externalId>true</externalId>
    <label>Snapshot Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>