force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <description>Project currency. Receipt money not applied to any invoice: stored Received_Amount above the invoice-allocated lines (legacy receipts), plus on-account allocation lines with no invoice.</description>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>