force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Units_Defaulted__c.field-meta.xml
<CustomField>
    <fullName>Units_Defaulted__c</fullName>
    <description>Units with Collection_Health__c = Defaulted.</description>
    <label>Units Defaulted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>