force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Units_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Units_Fully_Paid__c</fullName>
    <description>Units with Collection_Health__c = Fully Paid.</description>
    <label>Units Fully Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>