force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Units_On_Track__c.field-meta.xml
<CustomField>
    <fullName>Units_On_Track__c</fullName>
    <description>Units with Collection_Health__c = On Track.</description>
    <label>Units On Track</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>