force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Units_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Units_Overdue__c</fullName>
    <description>Units with Collection_Health__c = Overdue.</description>
    <label>Units Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>