force-app/main/default/objects/Finance_Daily_Snapshot__c/fields/Units_Total__c.field-meta.xml
<CustomField>
    <fullName>Units_Total__c</fullName>
    <description>Count of Booked/Reserved/Sold units in the project.</description>
    <label>Units Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>